# RCJ_WW_ESP_IDF

./: .gitignore  BugList.txt  CMakeLists.txt  color_data.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old  thresholds.txt
components/BTDebug/: BTDebug.cpp  CMakeLists.txt  spp_callbacks.cpp
components/BTDebug/include/: BTDebug.h
components/I2Cdev/: CMakeLists.txt  I2Cdev.cpp
components/IO/: CMakeLists.txt  mpu6050.h
components/InputLib/: BallSensor.cpp  BallSensor.h  CMakeLists.txt  DribblerMicroswitch.cpp  DribblerMicroswitch.h  Kconfig.projbuild  LightGates.cpp  LightGates.h  LineSensor.cpp  LineSensor.h  OpenMV.cpp  OpenMV.h  RealDist.cpp  locator.cpp  locator.h  mpu6050.cpp  mpu6050.h
components/InputLib/include/: RealDist.h  cam_types.h  sensors.h
components/MotorControl/: CMakeLists.txt  motorControl.cpp
components/air_debug/: CMakeLists.txt  air_debug.cpp  spp_calbags.cpp  spp_callbacks.cpp  spp_callbacks.h
components/button/: idf_component.yml
components/debug_log/: CMakeLists.txt  debug_log.cpp
components/encoder/: CMakeList.txt  encoder.cpp  encoder.h
components/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_i2c_legacy.c
log_files/: hello.txt
main/: CMakeLists.txt  display.cpp  display.h  encoder.cpp  encoder.h  global.cpp  global.h  logics.cpp  logics.h  logics_stable.cpp  main.cpp  mpu6050.cpp  new_drv_driver.txt  nvs_templates.cpp  nvs_templates.h  pictures.h  sensors.h  vector2.cpp  vector2.h
trash/: c_cpp_properties.json
trash/BTDebug/: CMakeLists.txt
trash/air_debug/: CMakeLists.txt  air_debug.cpp
(+7 files in other folders)
